metadata/force-app/main/default/objects/CustomName_yqzGq__c/CustomName_yqzGq__c.object-meta.xml
<CustomObject>
    <description>Description_kLvcO</description>
    <label>CustomLabel_aAXWW</label>
    <nameField>
        <label>CustomLabel_aAXWW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_aAXWWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>