metadata/force-app/main/default/objects/CustomName_yqzGq__c/fields/CustomField_FiMnc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_FiMnc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkDVey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>