metadata/force-app/main/default/objects/CustomName_yqzGq__c/fields/CustomField_quBPE__c.field-meta.xml
<CustomField>
    <fullName>CustomField_quBPE__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldOahpQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>